--- a/docs/style.css
+++ b/docs/style.css
@@ -3,3 +3,46 @@
   margin: 0;
   padding: 0;
 }
+body {
+    font-family: -apple-system, "BlinkMacSystemFont", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    background: #FCFEF9;
+    color: #1B1C21;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+    height: 100vh;
+}
+h1 {
+    margin-bottom: 20px;
+}
+.drag-error {
+    margin-top: 10px;
+    display: none;
+    color: #362F3E;
+}
+.drag-target {
+    border: 1px dashed #EAC9C0;
+    border-radius: 10px;
+    color: #EAC9C0;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: default;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+}
+.drag-target.dragged {
+    border-width: 2px;
+    border-style: solid;
+}
+.file-input {
+    position: absolute;
+    left: -100000px;
+    top: -100000px;
+    visibility: hidden;
+}
